# unicode

./: README.md  unicode.code-workspace
edcom/: build.py  pyproject.toml  style.css
edcom/distribution/East Asia/: Han.html
edcom/distribution/General Structure/: Compatibility Characters.html  Unicode Design Principles.html
edcom/source/: README.md
edcom/source/East Asia/: Han.html  README.md
edcom/source/General Structure/: Compatibility Characters.html  README.md  Unicode Design Principles.html
khmer/: characters.yaml  data.py  graphical-units.yaml  pyproject.toml
khmer/data/: categorization.yaml  characters.yaml  graphical-units.yaml
ucd/: .gitignore  decompile.py  pyproject.toml
